# hopper-airflow

./: .env.exemple  Dockerfile  entrypoint.sh  pyproject.toml
dags/: dag_weather.py
pipelines/weather/: pipe_weather.py
