[project]
name = "hooper-airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow[password,postgres]==2.10.3",
    "dotenv>=0.9.9",
    "msal>=1.34.0",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pyarrow>=22.0.0",
    "sqlalchemy<2.0",
]
